# Voice-Conversion-System

./: .gitignore  .pre-commit-config.yaml  0390.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: cyclegan.yaml  default.yaml  vae.yaml
demo/: app.py
scripts/: demo.py  generate_data.py  sample.py  train.py
src/voice_conversion/: __init__.py
src/voice_conversion/data/: __init__.py
src/voice_conversion/evaluation/: __init__.py
src/voice_conversion/models/: __init__.py  cyclegan.py  hifigan.py  vae.py
src/voice_conversion/training/: __init__.py
src/voice_conversion/utils/: __init__.py  audio.py
tests/: test_models.py
